--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html>
 
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
 		<title>Projeto 01</title>
-		<link href="css/style.css" type="text/css" rel="stylesheet" />
-		<meta charset="utf-8" />
+		<!--Tags para SEO-->
+		<meta name="description" content="Exemplo de descrição para o meu site">
+		<meta name="keywords" content="HTML, CSS, JavaScript">
+		<meta name="author" content="Juliano Alonso">
+		<!---->
+		<link href="css/style.css" type="text/css" rel="stylesheet" />		
 	</head>
 
 	<body>
 
-
-	
 	<div class="header">
 		<div class="center">
 			<img src="images/logo.png" />
@@ -68,10 +72,7 @@
 		</div><!--center-->
 
 		<div class="arrow"></div>
-
-
 	</div><!--container-2-->
-
 
 	<div class="section-1">
 		<div class="center">
